update to landerer, redefine rho

--- a/steric_height.ipynb
+++ b/steric_height.ipynb
@@ -62,7 +62,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading files of  SALT\n",
       "loading files of  THETA\n"
      ]
     }
@@ -71,11 +70,40 @@
     "## Load 2D Monthly data...SSH \n",
     "data_dir= ECCO_dir + '/nctiles_monthly'\n",
     "ecco_daily_vars = ecco.recursive_load_ecco_var_from_years_nc(data_dir, \\\n",
-    "                                           vars_to_load=['THETA','SALT'],\\\n",
-    "                                           years_to_load=range(2008,2009)).load() # if desired, add after 'SSH','NEW_VAR',... 'SSH','OBP',                                           \n",
+    "                                           vars_to_load=['THETA'],\\\n",
+    "                                           years_to_load=range(2017,2018)).load() # if desired, add after 'SSH','NEW_VAR',... 'SSH','OBP',                                           \n",
     "\n",
     "## Merge the ecco_grid with the ecco_vars to make the ecco_ds\n",
     "ecco_monthly_ds = xr.merge((ecco_grid , ecco_daily_vars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile_num = 10\n",
+    "# save file \n",
+    "# -------------------------------\n",
+    "filename = ('/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/rho_270_theta_2017.nc')\n",
+    "ds = xr.Dataset(\n",
+    "    data_vars=dict(\n",
+    "        theta=([\"time\",\"layer\",\"j\", \"i\"], ecco_monthly_ds.THETA.isel(tile=tile_num).data),\n",
+    "    ),\n",
+    "    coords=dict(\n",
+    "        i=([\"i\"], ecco_monthly_ds.THETA.i.data), \n",
+    "        j=([\"j\"], ecco_monthly_ds.THETA.j.data),\n",
+    "        XC=([\"j\",\"i\"], ecco_monthly_ds.THETA.XC.isel(tile=tile_num).data), \n",
+    "        YC=([\"j\",\"i\"], ecco_monthly_ds.THETA.YC.isel(tile=tile_num).data),\n",
+    "        # tile=([\"tile\"], ecco_monthly_ds.SALT.tile.data), \n",
+    "        time=([\"time\"], ecco_monthly_ds.THETA.time.data), \n",
+    "        layer=([\"layer\"], np.arange(np.shape(ecco_grid.drF)[0])),\n",
+    "        drF=([\"layer\"], ecco_grid.drF.data),\n",
+    "        hFacC=([\"layer\",\"j\",\"i\"], ecco_grid.hFacC.isel(tile=tile_num).data),\n",
+    "    ),\n",
+    ")\n",
+    "ds.to_netcdf(path=filename)"
    ]
   },
   {
