longer time serieses

--- a/steric_height.ipynb
+++ b/steric_height.ipynb
@@ -55,13 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loading files of  SALT\n",
       "loading files of  THETA\n"
      ]
     }
@@ -70,8 +71,8 @@
     "## Load 2D Monthly data...SSH \n",
     "data_dir= ECCO_dir + '/nctiles_monthly'\n",
     "ecco_daily_vars = ecco.recursive_load_ecco_var_from_years_nc(data_dir, \\\n",
-    "                                           vars_to_load=['THETA'],\\\n",
-    "                                           years_to_load=range(2017,2018)).load() # if desired, add after 'SSH','NEW_VAR',... 'SSH','OBP',                                           \n",
+    "                                           vars_to_load=['THETA','SALT'],\\\n",
+    "                                           years_to_load=range(2007,2008)).load() # if desired, add after 'SSH','NEW_VAR',... 'SSH','OBP',                                           \n",
     "\n",
     "## Merge the ecco_grid with the ecco_vars to make the ecco_ds\n",
     "ecco_monthly_ds = xr.merge((ecco_grid , ecco_daily_vars))"
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,6 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# only need if broken up into three chunks for size's sake \n",
     "rho_jmd95 = np.concatenate((rho_jmd95,rho_jmd95_2,rho_jmd95_3),axis=0)"
    ]
   },
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +428,7 @@
     ")\n",
     "# save file \n",
     "# -------------------------------\n",
-    "filename = ('/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/rho_270_steric_2008.nc')\n",
+    "filename = ('/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/rho_270_steric_2007.nc')\n",
     "ds = xr.Dataset(\n",
     "    data_vars=dict(\n",
     "        rho=([\"time\",\"layer\",\"j\", \"i\"], rho_jmd95),\n",
