prep and run of all years

--- a/steric_height.ipynb
+++ b/steric_height.ipynb
@@ -19,43 +19,17 @@
     "import cartopy.feature as cfeature\n",
     "import matplotlib as mpl\n",
     "from xgcm import Grid \n",
+    "from jmd95 import densjmd95\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "from jmd95 import densjmd95"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sys.path.append('/Users/jakesteinberg/ECCOv4-py/ECCOv4-py')\n",
     "import ecco_v4_py as ecco"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Set top-level file directory for the ECCO NetCDF files\n",
-    "## =================================================================\n",
-    "# base_dir = '/home/username/'\n",
-    "base_dir = '/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/'\n",
-    "## define a high-level directory for ECCO fields\n",
-    "ECCO_dir = base_dir + '/v5'\n",
-    "## Load the model grid\n",
-    "grid_dir= ECCO_dir + '/nctiles_grid/'\n",
-    "# ecco_grid = ecco.load_ecco_grid_nc(grid_dir, 'ECCOv4r3_grid.nc', k_subset=[0])\n",
-    "ecco_grid = ecco.load_ecco_grid_nc(grid_dir, 'ECCO-GRID.nc')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,11 +42,22 @@
     }
    ],
    "source": [
+    "## Set top-level file directory for the ECCO NetCDF files\n",
+    "## =================================================================\n",
+    "# base_dir = '/home/username/'\n",
+    "base_dir = '/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/'\n",
+    "## define a high-level directory for ECCO fields\n",
+    "ECCO_dir = base_dir + '/v5'\n",
+    "## Load the model grid\n",
+    "grid_dir= ECCO_dir + '/nctiles_grid/'\n",
+    "# ecco_grid = ecco.load_ecco_grid_nc(grid_dir, 'ECCOv4r3_grid.nc', k_subset=[0])\n",
+    "ecco_grid = ecco.load_ecco_grid_nc(grid_dir, 'ECCO-GRID.nc')\n",
+    "\n",
     "## Load 2D Monthly data...SSH \n",
     "data_dir= ECCO_dir + '/nctiles_monthly'\n",
     "ecco_daily_vars = ecco.recursive_load_ecco_var_from_years_nc(data_dir, \\\n",
     "                                           vars_to_load=['THETA','SALT'],\\\n",
-    "                                           years_to_load=range(2007,2008)).load() # if desired, add after 'SSH','NEW_VAR',... 'SSH','OBP',                                           \n",
+    "                                           years_to_load=range(2017,2018)).load() # if desired, add after 'SSH','NEW_VAR',... 'SSH','OBP',                                           \n",
     "\n",
     "## Merge the ecco_grid with the ecco_vars to make the ecco_ds\n",
     "ecco_monthly_ds = xr.merge((ecco_grid , ecco_daily_vars))"
@@ -85,6 +70,7 @@
    "outputs": [],
    "source": [
     "tile_num = 10\n",
+    "# SAVE RAW THETA \n",
     "# save file \n",
     "# -------------------------------\n",
     "filename = ('/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/rho_270_theta_2017.nc')\n",
@@ -109,40 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "ocean_mask = np.ceil(ecco_monthly_ds.hFacC[0])\n",
-    "ocean_mask = ocean_mask.where(ocean_mask==1, np.nan)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(12, 50, 13, 270, 270)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.shape(ecco_monthly_ds.SALT) # [month, depth, tile, lat,lon]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ocean_mask = ocean_mask.where(ocean_mask==1, np.nan)\n",
     "H = ecco_monthly_ds.Depth \n",
     "# z_star = ((ecco_monthly_ds.Z - ecco_monthly_ds.SSHDYN)/(H + ecco_monthly_ds.SSHDYN))*H"
    ]
@@ -187,7 +145,7 @@
     "testloc = np.where((ecco_monthly_ds.YC > 33) & (ecco_monthly_ds.YC < 35) & (ecco_monthly_ds.XC > -45) & (ecco_monthly_ds.XC < -43))\n",
     "test_salt = ecco_monthly_ds.SALT[0,:,testloc[0][0],testloc[1][0],testloc[2][0]]\n",
     "test_salt = test_salt.where(test_salt>0, np.nan)\n",
-    "\n",
+    "# -- \n",
     "f, ax = plt.subplots(1,1,figsize=(3,6))\n",
     "ax.plot(test_salt, zz[:,testloc[0][0],testloc[1][0],testloc[2][0]])\n",
     "ax.scatter(test_salt, zz[:,testloc[0][0],testloc[1][0],testloc[2][0]])\n",
@@ -195,7 +153,6 @@
     "ax.grid()\n",
     "ax.set_title('salinity')\n",
     "ax.set_ylabel('z [m]')\n",
-    "\n",
     "# print(z_star[-1,0,testloc[0][0],testloc[1][0],testloc[2][0]].data)\n",
     "print(H[testloc[0][0],testloc[1][0],testloc[2][0]].data)\n",
     "# print(z_star[np.where(np.isnan(test_salt))[0][0]-1,0,testloc[0][0],testloc[1][0],testloc[2][0]].data)"
@@ -264,18 +221,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# density using ECCO equation of state(?) \n",
+    "# DENSITY -- using ECCO equation of state \n",
     "tile_num = 10\n",
     "p = gsw.p_from_z(ecco_monthly_ds.Z, ecco_monthly_ds.YC.isel(tile=tile_num)) # .isel(tile=tile_num)\n",
     "z = gsw.z_from_p(p, ecco_monthly_ds.YC.isel(tile=tile_num))\n",
     "# chunk it up so the old function isn't overwhelmed (for 270, only reading in 1 year at a time anyway)\n",
     "salt = ecco_monthly_ds.SALT.isel(tile=tile_num) # SALT[0:24]\n",
     "salt = salt.where(salt>0, np.nan)\n",
-    "rho_jmd95 = densjmd95(salt,ecco_monthly_ds.THETA.isel(tile=tile_num),p) # THETA[0:24], .isel(tile=tile_num)"
+    "rho_jmd95 = densjmd95(salt,ecco_monthly_ds.THETA.isel(tile=tile_num),p) # THETA[0:24], .isel(tile=tile_num)\n",
+    "\n",
+    "# STERIC -- FOR LLC 270 only 1 tile \n",
+    "g = 9.81; rho0 = 1029; # 1035;\n",
+    "rho_pr_jmd = np.nan*np.ones((np.shape(rho_jmd95)[0],np.shape(rho_jmd95)[2],np.shape(rho_jmd95)[3]))\n",
+    "rho_int_jmd = np.nan*np.ones((np.shape(rho_jmd95)[0],np.shape(rho_jmd95)[2],np.shape(rho_jmd95)[3]))\n",
+    "for i in range(np.shape(rho_jmd95)[0]):\n",
+    "    rho_pr_jmd[i] = np.sum((rho_jmd95[i]-rho0)*ecco_grid.hFacC.isel(tile=tile_num)*ecco_grid.drF, axis=0) # .isel(tile=tile_num)\n",
+    "    rho_int_jmd[i] = np.sum((rho_jmd95[i])*ecco_grid.hFacC.isel(tile=tile_num)*ecco_grid.drF, axis=0) # .isel(tile=tile_num)\n",
+    "steric_height_jmd = (-1/rho0)*rho_pr_jmd\n",
+    "steric_height_p_jmd = (-1*g)*rho_int_jmd\n",
+    "# ------------------------------------------------------------------------------------\n",
+    "# DATA-ARRAY -- FOR LLC 270 only 1 tile .isel(tile=tile_num)\n",
+    "density_jmd_xr = xr.DataArray(\n",
+    "    data=rho_jmd95,\n",
+    "    dims=[\"time\",\"layer\",\"j\", \"i\"],\n",
+    "    coords=dict(\n",
+    "        i=([\"i\"], ecco_monthly_ds.SALT.i.data), j=([\"j\"], ecco_monthly_ds.SALT.j.data),\n",
+    "        XC=([\"j\",\"i\"], ecco_monthly_ds.SALT.XC.isel(tile=tile_num).data), YC=([\"j\",\"i\"], ecco_monthly_ds.SALT.YC.isel(tile=tile_num).data), \n",
+    "        time=([\"time\"], ecco_monthly_ds.SALT.time.data), layer=([\"layer\"], np.arange(np.shape(ecco_grid.drF)[0])), # tile=([\"tile\"], ecco_monthly_ds.SALT.tile.data)\n",
+    "    ),\n",
+    ")\n",
+    "steric_height_jmd_xr = xr.DataArray(\n",
+    "    data=steric_height_jmd,\n",
+    "    dims=[\"time\",\"j\", \"i\"],\n",
+    "    coords=dict(\n",
+    "        i=([\"i\"], ecco_monthly_ds.SALT.i.data), j=([\"j\"], ecco_monthly_ds.SALT.j.data),\n",
+    "        XC=([\"j\",\"i\"], ecco_monthly_ds.SALT.XC.isel(tile=tile_num).data), YC=([\"j\",\"i\"], ecco_monthly_ds.SALT.YC.isel(tile=tile_num).data),\n",
+    "        time=([\"time\"], ecco_monthly_ds.SALT.time.data), # tile=([\"tile\"], ecco_monthly_ds.SALT.tile.data), \n",
+    "    ),\n",
+    ")\n",
+    "# ------------------------------------------------------------------------------------\n",
+    "# -- SAVE --  \n",
+    "# -------------------------------\n",
+    "filename = ('/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/rho_270_steric_2017.nc')\n",
+    "ds = xr.Dataset(\n",
+    "    data_vars=dict(\n",
+    "        rho=([\"time\",\"layer\",\"j\", \"i\"], rho_jmd95),\n",
+    "        steric=([\"time\",\"j\", \"i\"], steric_height_jmd),\n",
+    "        steric_p=([\"time\",\"j\", \"i\"], steric_height_p_jmd),\n",
+    "    ),\n",
+    "    coords=dict(\n",
+    "        i=([\"i\"], ecco_monthly_ds.SALT.i.data), \n",
+    "        j=([\"j\"], ecco_monthly_ds.SALT.j.data),\n",
+    "        XC=([\"j\",\"i\"], ecco_monthly_ds.SALT.XC.isel(tile=tile_num).data), \n",
+    "        YC=([\"j\",\"i\"], ecco_monthly_ds.SALT.YC.isel(tile=tile_num).data),\n",
+    "        # tile=([\"tile\"], ecco_monthly_ds.SALT.tile.data), \n",
+    "        time=([\"time\"], ecco_monthly_ds.SALT.time.data), \n",
+    "        layer=([\"layer\"], np.arange(np.shape(ecco_grid.drF)[0])),\n",
+    "        drF=([\"layer\"], ecco_grid.drF.data),\n",
+    "        hFacC=([\"layer\",\"j\",\"i\"], ecco_grid.hFacC.isel(tile=tile_num).data),\n",
+    "    ),\n",
+    ")\n",
+    "ds.to_netcdf(path=filename)"
    ]
   },
   {
@@ -386,12 +396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# FOR LLC 270 only 1 tile \n",
-    "rho0 = 1035; g = 9.81;\n",
+    "g = 9.81; rho0 = 1029; # 1035;\n",
     "rho_pr_jmd = np.nan*np.ones((np.shape(rho_jmd95)[0],np.shape(rho_jmd95)[2],np.shape(rho_jmd95)[3]))\n",
     "rho_int_jmd = np.nan*np.ones((np.shape(rho_jmd95)[0],np.shape(rho_jmd95)[2],np.shape(rho_jmd95)[3]))\n",
     "for i in range(np.shape(rho_jmd95)[0]):\n",
@@ -403,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +438,7 @@
     ")\n",
     "# save file \n",
     "# -------------------------------\n",
-    "filename = ('/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/rho_270_steric_2007.nc')\n",
+    "filename = ('/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/rho_270_steric_1997.nc')\n",
     "ds = xr.Dataset(\n",
     "    data_vars=dict(\n",
     "        rho=([\"time\",\"layer\",\"j\", \"i\"], rho_jmd95),\n",
