big edits for r1 revisions

--- a/steric_height.ipynb
+++ b/steric_height.ipynb
@@ -57,7 +57,7 @@
     "data_dir= ECCO_dir + '/nctiles_monthly'\n",
     "ecco_daily_vars = ecco.recursive_load_ecco_var_from_years_nc(data_dir, \\\n",
     "                                           vars_to_load=['THETA','SALT'],\\\n",
-    "                                           years_to_load=range(2017,2018)).load() # if desired, add after 'SSH','NEW_VAR',... 'SSH','OBP',                                           \n",
+    "                                           years_to_load=range(2016,2018)).load() # if desired, add after 'SSH','NEW_VAR',... 'SSH','OBP',                                           \n",
     "\n",
     "## Merge the ecco_grid with the ecco_vars to make the ecco_ds\n",
     "ecco_monthly_ds = xr.merge((ecco_grid , ecco_daily_vars))"
@@ -67,16 +67,36 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-01-16T12:00:00.000000000\n",
+      "2017-12-16T12:00:00.000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ecco_monthly_ds.THETA.time[0].data)\n",
+    "print(ecco_monthly_ds.THETA.time[-1].data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tile_num = 10\n",
-    "# SAVE RAW THETA \n",
+    "# SAVE RAW THETA/SALT \n",
     "# save file \n",
     "# -------------------------------\n",
-    "filename = ('/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/rho_270_theta_2017.nc')\n",
+    "filename = ('/Users/jakesteinberg/Documents/NASA_OSTST/ECCO/ts/raw_270_ts_2016_2017.nc')\n",
     "ds = xr.Dataset(\n",
     "    data_vars=dict(\n",
     "        theta=([\"time\",\"layer\",\"j\", \"i\"], ecco_monthly_ds.THETA.isel(tile=tile_num).data),\n",
+    "        salt=([\"time\",\"layer\",\"j\", \"i\"], ecco_monthly_ds.SALT.isel(tile=tile_num).data),\n",
     "    ),\n",
     "    coords=dict(\n",
     "        i=([\"i\"], ecco_monthly_ds.THETA.i.data), \n",
